--- a/src/data/i18n/es-es.json
+++ b/src/data/i18n/es-es.json
@@ -157,65 +157,54 @@
     }
   },
   "landing": {
-    "about": "Nuestro objetivo es crear el iniciador Next.js más rico en funciones, global e icónico del mundo. Explore la lista completa de funciones. Ofrecemos más que solo código, es un viaje. Es estable y está listo para producción.",
+    "about": "Explora la Revolución del Bienestar con Gano Excel en Cancún. Experimenta el poder transformador del Ganoderma Lucidum en nuestra exclusiva gama de cafés y productos saludables, disponibles aquí en Cancún, la Riviera Maya y en todo México.",
     "btn1-products-now": "Productos ahora",
     "btn1-sell": "Vender",
+    "btn1-buy-now": "Comprar Ahora",
     "btn2-download": "Download",
     "btn2-starter": "Next.js Relivator Starter",
     "features": {
-      "clock": {
-        "description": "Manténgase encaminado con Drizzle ORM. Implementado en Vercel, Railway, Neon, etc.",
-        "title": "Base de datos"
+      "1": {
+        "title": "El Poder del Ganoderma",
+        "description": "Descubre los beneficios del Ganoderma Lucidum, un hongo milenario conocido por sus propiedades antioxidantes y fortalecedoras del sistema inmunológico."
       },
-      "cryptography": {
-        "description": "Interactúe con el directorio de aplicaciones, el enriamiento, los diseños, la carga de la interfaz de usuario, las rutas API y más.",
-        "title": "Siguiente.js 14"
+      "2": {
+        "title": "Gano Café: Sabor y Salud",
+        "description": "Prueba nuestro Gano Café, una fusión perfecta de café gourmet y Ganoderma Lucidum, ofreciendo un sabor excepcional y beneficios para la salud."
       },
-      "currency": {
-        "description": "Componentes de interfaz de usuario creados con Radix UI y diseñados con Tailwind CSS.",
-        "title": "Componentes"
+      "3": {
+        "title": "Compromiso Gano Excel",
+        "description": "En Gano Excel nos dedicamos a mejorar tu bienestar, ofreciendo productos de alta calidad con ingredientes naturales y beneficios comprobados."
       },
-      "devtools": {
-        "description": "Suscripciones gratuitas y de pago con Stripe.",
-        "title": "Suscripciones",
-        "ambitions-description": "Deja de correr de un titular a otro. Con Relivator tendrás posibilidades ilimitadas. Puedes crear lo que quieras; Todas las herramientas ya están preparadas, solo para ti."
+      "4": {
+        "title": "Gano Cancun: Tu Distribuidor",
+        "description": "Como distribuidores independientes de Gano Excel en Cancún, llevamos lo mejor de la salud y el bienestar a tu puerta."
       },
-      "files": {
-        "description": "Autenticación de middleware mediante NextAuth.js.",
-        "title": "Autenticación",
-        "on-the-fly": "Personalización completa sobre la marcha",
-        "on-the-fly-description": "Sumérgete en una extensa lista de características en nuestro repositorio de proyectos. Cambie sin esfuerzo entre Clerk/NextAuth.js y MySQL/PostgreSQL para adaptarse a los requisitos de su proyecto.",
-        "roadmap": "Grandes ambiciones: posibilidades ilimitadas"
+      "5": {
+        "title": "Bienestar al Natural",
+        "description": "Nuestra gama de productos combina lo mejor de la naturaleza con innovaciones científicas para potenciar tu salud y energía."
       },
-      "subtitle": "Desde el código hasta el diseño, Relivator tiene funcionalidades que potencian tus proyectos web.",
-      "text": {
-        "description": "Manipule la aplicación sin esfuerzo con componentes de servidor y cliente. Utilice gancho. Y más.",
-        "title": "Reaccionar 18"
+      "6": {
+        "title": "Calidad en Cada Producto",
+        "description": "Cada producto de Gano Excel está diseñado con los más altos estándares de calidad, garantizando una experiencia superior en cada uso."
       },
-      "title": "Características"
+      "7": {
+        "title": "Estilo de Vida Gano",
+        "description": "Únete a la comunidad Gano Excel y transforma tu estilo de vida con consejos, productos y apoyo continuo."
+      },
+      "8": {
+        "title": "Expande tus Horizontes",
+        "description": "Descubre oportunidades de emprendimiento con Gano Excel Cancun y crece personal y profesionalmente."
+      }
     },
     "get-started": "Características",
-    "heading": "Construye Tiendas Online Más Eficientes, Atractivas y Rentables: Relivator Potencia Tu eCommerce con el Poder de Next.js",
+    "heading": "Revitaliza tu Vida con Gano Excel Cancun\nDescubre Salud y Bienestar en Cada Taza",
     "meta": {
       "description": "Relivator construido con Next.js",
       "title": "Relivator"
     },
-    "open-source": {
-      "stars": "¡Este proyecto tiene {count} estrellas! 😍",
-      "stars#few": "¡Este proyecto tiene {count} estrellas! 😍",
-      "stars#many": "¡Este proyecto tiene {count} estrellas! 😍",
-      "stars#one": "Este proyecto tiene solo una estrella... 😢",
-      "subtitle": {
-        "first": "Bleverse Relivator defiende el espíritu del código abierto y fomenta la evolución del código colaborativo.",
-        "second": "Explora nuestra base de código en"
-      },
-      "title": "Adopte el código abierto"
-    },
-    "subtitle": "Bleverse Relivator simplifica su viaje de desarrollo. Comience con funciones integradas optimizadas para el desarrollo web moderno.",
-    "things": {
-      "linkText": "Ir a la lista"
-    },
-    "title": "Descubra las herramientas fundamentales para React, Next.js y más. Diseñado especialmente para ti."
+    "join-as": "Únete Como Distribuidor Independiente",
+    "interested-in": "¿Interesado en Comprar a Precio de Fábrica?"
   },
   "LanguageSwitch": {
     "choose-language": "Idioma"
@@ -718,11 +707,13 @@
     },
     "product": {
       "products": "Productos",
+      "featured": "Destacados",
       "noDescription": "No hay descripción disponible para este producto.",
       "description": "Descripción",
       "moreProductsFrom": "Más productos de {storeName}",
       "buyProductsFromOurStores": "Compra productos en nuestras tiendas",
-      "addToCart": "Añadir a la cesta"
+      "addToCart": "Añadir a la cesta",
+      "view-all": "Ver todos"
     }
   },
   "contact": {
