fix error with default clothing

--- a/src/data/i18n/es-es.json
+++ b/src/data/i18n/es-es.json
@@ -189,7 +189,7 @@
         "description": "Cada producto de Gano Excel está diseñado con los más altos estándares de calidad, garantizando una experiencia superior en cada uso."
       },
       "7": {
-        "title": "Estilo de Vida Gano",
+        "title": "Gano Estilo de Vida",
         "description": "Únete a la comunidad Gano Excel y transforma tu estilo de vida con consejos, productos y apoyo continuo."
       },
       "8": {
