change not-found messages

--- a/src/data/i18n/en-us.json
+++ b/src/data/i18n/en-us.json
@@ -406,9 +406,9 @@
       "title": "Discover the paramount tools for React, Next.js, and beyond. Tailored especially for you."
     },
     "not-found": {
-      "description": "The resource you're looking for might have been moved, renamed, or might never have existed. Please verify the URL or navigate to other sections using the menu.",
+      "description": "It seems this page took a break under the Cancún sun and we can't find it. It might have been moved, renamed, or perhaps it never existed. Don't worry, we invite you to explore the wonderful world of Ganoderma and discover how it can improve your health and well-being. Please check the URL or navigate to other sections using the menu.",
       "go-home": "Return to Home Page",
-      "title": "🫠 Page not found! 🥲 Sadly..."
+      "title": "🌴 Oops, page not found in Cancún 🌴"
     },
     "tools": {
       "binary-code": {
