--- a/src/data/i18n/es-es.json
+++ b/src/data/i18n/es-es.json
@@ -339,9 +339,9 @@
       "title": "Discover the paramount tools for React, Next.js, and beyond. Tailored especially for you."
     },
     "not-found": {
-      "description": "El recurso que estás buscando podría haber sido movido, renombrado o tal vez nunca haya existido. Verifica la URL o navega a otras secciones usando el menú.",
+      "description": "Parece que esta página se tomó un descanso bajo el sol de Cancún y no la podemos encontrar. Podría haber sido movida, renombrada o tal vez nunca haya existido. No te preocupes, te invitamos a explorar el maravilloso mundo del Ganoderma y descubrir cómo puede mejorar tu salud y bienestar. Verifica la URL o navega a otras secciones usando el menú.",
       "go-home": "Regresar a la página de inicio",
-      "title": "🫠 ¡Página no encontrada! 🥲 Lamentablemente..."
+      "title": "🌴 Oops, página no encontrada en Cancún 🌴"
     },
     "tools": {
       "binary-code": {
