--- a/src/data/i18n/en-us.json
+++ b/src/data/i18n/en-us.json
@@ -184,7 +184,7 @@
     "btn2-download": "Download",
     "btn2-starter": "Next.js Relivator Starter",
     "features": {
-      "1": {
+"1": {
         "description": "Discover the benefits of Ganoderma Lucidum, an ancient mushroom known for its antioxidant and immune system-strengthening properties.",
         "title": "The Power of Ganoderma"
       },
@@ -218,32 +218,44 @@
       },
       "clock": {
         "description": "Maintain peak performance with Drizzle ORM, by switching MySQL and Postgres on-the-fly. Enjoy flexible deployment options, including Planetscale, Vercel, Railway, Neon, and more.",
-        "title": "Database Integration: Robust and Versatile"
+        "title": "Database Integration: Robust and Versatile",
+        "title-v2": "Database Integration: Robust and Versatile",
+        "description-v2": "Maintain peak performance with Drizzle ORM, by switching MySQL and Postgres on-the-fly. Enjoy flexible deployment options, including Planetscale, Vercel, Railway, Neon, and more."
       },
       "cryptography": {
         "description": "Experience seamless navigation with advanced features like App Router, Layouts, and Loading UI. Leverage powerful API routes and explore innovative capabilities beyond the basics.",
-        "title": "Next.js 14: Enhanced User Experience & DX"
+        "title": "Next.js 14: Enhanced User Experience & DX",
+        "title-v2": "Next.js 14: Enhanced User Experience & DX",
+        "description-v2": "Experience seamless navigation with advanced features like App Router, Layouts, and Loading UI. Leverage powerful API routes and explore innovative capabilities beyond the basics."
       },
       "currency": {
         "description": "Craft stunning UI with components built on top of Radix and Shadcn UI, beautifully styled with Tailwind CSS for a modern aesthetic. VSCode is recommended for a full immersion experience.",
-        "title": "Components: Elegant & Functional"
+        "title": "Components: Elegant & Functional",
+        "title-v2": "Components: Elegant & Functional",
+        "description-v2": "Craft stunning UI with components built on top of Flowbite and Shadcn UI, styled with Radix and Tailwind CSS for a modern aesthetic. VSCode is recommended for a full immersion experience."
       },
       "devtools": {
         "description": "Implemented a robust subscription system, both free and paid plans are supported, optimized for efficiency and scalability. Learn README.md of the project to learn more.",
         "title": "Stripe Subscriptions: Powerful & Flexible",
-        "ambitions-description": "Stop running from one starter to the next. With Relivator, you'll have unlimited possibilities. You can create anything you want; all the tools are already prepared, just for you."
+        "ambitions-description": "Stop running from one starter to the next. With Relivator, you'll have unlimited possibilities. You can create anything you want; all the tools are already prepared, just for you.",
+        "title-v2": "Stripe Subscriptions: Powerful & Flexible",
+        "description-v2": "Implemented a robust subscription system, both free and paid plans are supported, optimized for efficiency and scalability. Learn README.md of the project to learn more."
       },
       "files": {
         "description": "Deploy a versatile authentication system using NextAuth.js and Clerk, tailored for your application’s needs. Learn more in .env.example file, and you're ready to go.",
         "title": "User Authentication: Secure & Conditional",
         "on-the-fly": "Full On The Fly Customization",
         "roadmap": "Huge Ambitions: Limitless Possibilities",
-        "on-the-fly-description": "Dive into an extensive list of features in our project repository. Effortlessly switch between Clerk/NextAuth.js and MySQL/PostgreSQL to suit your project requirements."
+        "on-the-fly-description": "Dive into an extensive list of features in our project repository. Effortlessly switch between Clerk/NextAuth.js and MySQL/PostgreSQL to suit your project requirements.",
+        "title-v2": "User Authentication: Secure & Conditional",
+        "description-v2": "Deploy a versatile authentication system using NextAuth.js and Clerk, tailored for your application’s needs. Learn more in .env.example file, and you're ready to go."
       },
       "subtitle": "From code to design, Relivator has functionalities that supercharge your web projects.",
       "text": {
         "description": "Effortlessly manipulate your app with both Server and Client Components. Utilize advanced hooks and explore a range of additional features for a smoother development experience.",
-        "title": "React 18: Streamlined Modern Development"
+        "title": "React 18: Streamlined Modern Development",
+        "title-v2": "React 18: Streamlined Modern Development\t",
+        "description-v2": "Effortlessly manipulate your app with both Server and Client Components. Utilize advanced hooks and explore a range of additional features for a smoother development experience."
       },
       "title": "Features"
     },
@@ -269,7 +281,7 @@
       "linkText": "Go to list"
     },
     "title": "Discover the paramount tools for React, Next.js, and beyond. Tailored especially for you.",
-    "btn1-buy-now": "Buy now",
+"btn1-buy-now": "Buy now",
     "interested-in": "Interested in Buying at Factory Price?",
     "join-as": "Join as an Independent Distributor"
   },
@@ -591,7 +603,7 @@
     }
   },
   "plugins": {
-    "stars": "Star Relivator v1.2.2 on GitHub ⭐"
+    "stars": "Star Relivator v1.2.5 on GitHub ⭐"
   },
   "pricing": {
     "compare": {
@@ -764,5 +776,41 @@
   },
   "contact": {
     "submit": "Submit"
+  },
+  "faq": {
+    "1": {
+      "summary": "How can I install everything and get started immediately?",
+      "details": "Please visit the README.md file in the Relivator GitHub repository, where you'll always find the most current information about the project along with easy installation instructions."
+    },
+    "2": {
+      "summary": "Why should I choose Relivator as my Next.js 14 starter?",
+      "details": "The answer is simple: to prevent you from hopping between different starters. In fact, you can stop searching now. With Relivator, you are presented with unlimited possibilities. You can create anything you desire; all the necessary tools are already prepared, just for you."
+    },
+    "3": {
+      "summary": "Is it possible to speed up the release of Relivator v2.0?",
+      "details": "Developing something as ambitious as Relivator obviously takes a lot of time, especially since the project is primarily developed by just one person. The development could be significantly accelerated by hiring additional developers. Therefore, I, @blefnk Nazarii Korniienko, would be immensely grateful to anyone who could donate to the project in any amount. Please refer to the repository page to see Patreon and other platforms as well. A big thank you to everyone in advance!"
+    }
+  },
+  "demo": {
+    "launch": "Launch Demo",
+    "aria-label-goto": "Go to"
+  },
+  "metadata": {
+    "title": {
+      "home": "Home"
+    }
+  },
+  "checkout": {
+    "backToCart": "Back to cart",
+    "notConnectedHeading": "Store is not connected to Stripe",
+    "notConnectedDescription": "Store owner needs to connect their store to Stripe to accept payments",
+    "Pay": "Pay",
+    "Demo": "Test data can be used: 4242424242424242 | 12/34 | 567",
+    "Title": "Checkout",
+    "Description": "Checkout with your cart items",
+    "EmptyCartHeading": "Your cart is empty",
+    "EmptyCartDescription": "Add items to your cart to checkout",
+    "CartDetails": "Details",
+    "backToCartSingle": "Back"
   }
 }
